--- a/src/styles/prayer-detail.css
+++ b/src/styles/prayer-detail.css
@@ -65,6 +65,14 @@
   .pray-actions {
     align-items: flex-start;
   }
+  .pray-actions__menu {
+    width: 100%;
+    justify-content: flex-start;
+  }
+  .pray-actions .comment-item__menu {
+    left: 0;
+    right: auto;
+  }
 }
 
 .pray-hero h1 {
